examples/ex_12_flext_registry.expected
[create_and_service_methods]
create.default.type: 'FlextRegistry'
create.explicit.type: 'FlextRegistry'
create.auto_false.type: 'FlextRegistry'
create.auto_true.type: 'FlextRegistry'
decorated_handler.type: 'str'
execute.success: True
validate_business_rules.success: True
is_valid: True
service_info: "{'service_type': 'FlextRegistry'}"
result_property: True
runtime.type: 'ModelPrivateAttr'
context.type: 'FlextContext'
config.type: 'FlextSettings'
container.type: 'FlextContainer'

[summary_and_mixins]
summary.ok.success: True
summary.ok.failure: False
summary.fail.success: False
summary.fail.failure: True
mixin.ok.unwrap_or: 'value'
mixin.fail.error: 'boom'
mixin.fail.error_code: 'E_REG'
ensure_result.raw: 99
ensure_result.existing: 5
to_dict.none: '{}'
to_dict.mapping: "{'a': 1, 'b': 'x'}"
to_dict.basemodel: "{'handler_id': 'id-1', 'handler_name': 'h', 'handler_type': 'command', 'handler_mode': 'command', 'command_timeout': 0, 'max_command_retries': 0, 'metadata': None}"
generate_id.len: 36
generate_prefixed_id: True
generate_datetime_utc.type: 'datetime'

[registration_and_dispatch]
register_handler.a.success: True
register_handler.a.id: '_ProtocolHandler'
register_handler.duplicate.success: True
register_handler.b.success: True
register_handler.mode.success: True
create_from_callable.type: 'CallableHandler'
register_handlers.success: True
register_handlers.registered_len: 3
register_handlers.errors_len: 0
dispatch.a.success: False
dispatch.a.value: ''
dispatch.b.success: False
dispatch.b.value: ''

[bindings_and_plugins]
register_bindings.success: True
register_bindings.registered_len: 2
register_plugin.ok: True
register_plugin.dup: True
register_plugin.empty_name: True
register_plugin.validated: True
register_plugin.validate_fail: True
register_plugin.validate_exc: True
get_plugin.ok: 'plugin-http'
get_plugin.missing: True
list_plugins.transports: "['grpc', 'http']"
unregister_plugin.ok: True
unregister_plugin.missing: True
register_class_plugin.ok: True
register_class_plugin.dup: True
register_class_plugin.empty_name: True
get_class_plugin.ok: 'class-jwt'
get_class_plugin.missing: True
list_class_plugins.auth: "['jwt']"
unregister_class_plugin.ok: True
unregister_class_plugin.missing: True

[register_method_and_tracking]
register.service.plain: True
register.service.meta_dict: True
register.service.meta_model: True
register.service.bad: False
track.has_operation_count: True
track.operation_count: 1
